--- a/index.html
+++ b/index.html
@@ -4,43 +4,54 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>UAP Showcase</title>
+
+  <!-- Favicon + share card -->
+  <link rel="icon" href="gkb-espn.png">
+  <meta property="og:title" content="UAP Showcase">
+  <meta property="og:description" content="All units at true pixel size. Click Open to view any unit alone.">
+  <meta property="og:image" content="gkb-espn.png">
+
   <style>
-    :root { --bg:#edeef0; --text:#0b0c10; --muted:#60646b; --gap:24px; }
+    :root { --bg:#edeef0; --text:#0b0c10; --muted:#6b7280; --gap:24px; }
     * { box-sizing:border-box; }
     html, body { margin:0; background:var(--bg); color:var(--text);
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif; }
 
     /* Header */
-    header { padding:28px var(--gap) 18px; text-align:left; }
-    .brandline { display:flex; align-items:center; justify-content:flex-start; gap:18px; flex-wrap:wrap; }
-    .brandline img.logo-lockup { height:120px; width:auto; display:block; }
-    .brandline h1 { margin:0; font-size:48px; line-height:1.1; font-weight:800; letter-spacing:.2px; }
-    .subline { margin:10px 0 0; color:var(--muted); font-size:16px; text-align:left; }
+    header { background:#fff; border-bottom:1px solid #e5e7eb; padding:24px 36px 18px; text-align:left; }
+    .brandline { display:flex; align-items:center; justify-content:flex-start; gap:14px; flex-wrap:wrap; }
+    .brandline img.logo-lockup { height:90px; width:auto; display:block; }
+    .brandline h1 { margin:0; font-family:"Century Gothic","AppleGothic",sans-serif; font-size:56px; line-height:1.1; letter-spacing:.2px; font-weight:800; }
+    .subline { margin:6px 0 0; color:var(--muted); font-size:15px; }
 
-    /* Layout */
-    .page { padding:0 var(--gap) 60px; }
+    /* Page layout */
+    .page { padding:0 36px 80px; }
     .col { display:flex; flex-direction:column; gap:24px; width:max-content; }
+
     .stack { display:flex; flex-direction:column; gap:16px; }
     .card { width:max-content; }
-    iframe { display:block; border:0; overflow:hidden; background:#000; }
+    iframe { display:block; border:0; overflow:hidden; background:#0a0a0a; }
 
     /* Buttons */
-    .btn { appearance:none; border:1px solid #000; background:#000; color:#fff;
-      border-radius:999px; padding:8px 14px; font-size:12px; text-decoration:none; cursor:pointer;
-      transition:opacity .15s ease, transform .05s ease; white-space:nowrap; }
-    .btn:hover { opacity:.9; } .btn:active { transform:translateY(1px); }
+    .btn {
+      appearance:none; border:2px solid #000; background:#000; color:#fff;
+      border-radius:999px; padding:10px 16px; font-size:13px; text-decoration:none; cursor:pointer;
+      transition:transform .08s ease, opacity .15s ease; white-space:nowrap;
+    }
+    .btn:hover { transform:translateY(-1px); opacity:1; }
+    .btn:active { transform:translateY(0); }
 
     /* Button rows + separators */
-    .open-row { display:block; margin:30px 0; }          /* 30px above/below */
-    .sep { height:3px; background:#000; margin:30px 0; } /* 3px line, same spacing */
+    .open-row { display:block; margin:30px 0; }
+    .sep { height:3px; background:#111; margin:34px 0; opacity:.9; }
 
-    /* Fixed widths for lines */
+    /* Fixed widths */
     .w-1280 { width:1280px; } .w-970 { width:970px; } .w-728 { width:728px; } .w-320 { width:320px; }
 
-    /* Powered by */
-    .powered-footer { margin-top:60px; display:flex; align-items:center; justify-content:flex-start; gap:10px; width:100%; }
-    .powered-footer span { color:var(--muted); font-size:18px; font-weight:500; }
-    .powered-footer img.brandworks { height:180px; width:auto; display:block; }
+    /* Footer */
+    .powered-footer { margin-top:80px; display:flex; align-items:center; justify-content:flex-start; gap:12px; opacity:.9; }
+    .powered-footer span { color:var(--muted); font-size:16px; font-weight:500; }
+    .powered-footer img.brandworks { height:150px; width:auto; display:block; }
   </style>
 </head>
 <body>
@@ -55,14 +66,13 @@
   <div class="page">
     <div class="col" id="units"><!-- JS injects units here --></div>
 
-    <!-- Powered by -->
     <div class="powered-footer">
       <span>powered by</span>
       <img class="brandworks" src="brandworks.png" alt="Brandworks" />
     </div>
   </div>
 
-  <!-- Dynamic title + robust loader with true cache-busting for all assets -->
+  <!-- Dynamic title + loader -->
   <script>
   (function setTitle() {
     const params = new URLSearchParams(location.search);
@@ -74,55 +84,39 @@
 
     const parts = location.pathname.split('/').filter(Boolean);
     let repo = '';
-    if (location.hostname.endsWith('.github.io')) {
-      // username.github.io/<repo>/...
-      repo = parts[0] || '';
-    } else {
-      // /<owner>/<repo>/...
-      repo = parts[1] || parts[0] || '';
-    }
+    if (location.hostname.endsWith('.github.io')) repo = parts[0] || '';
+    else repo = parts[1] || parts[0] || '';
     if (repo) {
-      const cleaned = repo
-        .replace(/^UAP[-–]\s*/i, '')
-        .replace(/^UAP-Display[-–]\s*/i, '')
-        .replace(/[-_]/g, ' ')
-        .trim();
+      const cleaned = repo.replace(/^UAP[-–]\s*/i,'')
+                          .replace(/^UAP-Display[-–]\s*/i,'')
+                          .replace(/[-_]/g,' ')
+                          .trim();
       if (cleaned) { h1.textContent = cleaned; document.title = cleaned; }
     }
   })();
 
-  // Units (order/layout we agreed)
   const UNITS = [
     { dir:'1280x418', w:1280, h:418, label:'1280×418', sep:false },
     { dir:'1280x100', w:1280, h:100, label:'1280×100', sep:true  },
-
     { dir:'970x250',  w:970,  h:250, label:'970×250',  sep:false },
     { dir:'970x66',   w:970,  h:66,  label:'970×66',   sep:true  },
-
     { dir:'728x250',  w:728,  h:250, label:'728×250',  sep:false },
     { dir:'728x90',   w:728,  h:90,  label:'728×90',   sep:true  },
-
     { dir:'320x250',  w:320,  h:250, label:'320×250',  sep:false },
     { dir:'320x50',   w:320,  h:50,  label:'320×50',   sep:true  },
-
     { dir:'300x250',  w:300,  h:250, label:'300×250',  sep:false }
   ];
 
-  // Fallback filename patterns inside each folder
   function candidateFiles(dir) {
     return [
-      `uaps/${dir}/${dir}.html`,  // 320x250/320x250.html
-      `uaps/${dir}/index.html`,   // 320x250/index.html
-      `uaps/${dir}/i${dir}.html`  // 320x250/i320x250.html
+      `uaps/${dir}/${dir}.html`,
+      `uaps/${dir}/i${dir}.html`
     ];
   }
 
   async function pickFirstExisting(urls) {
     for (const url of urls) {
-      try {
-        const r = await fetch(url, { method:'HEAD', cache:'no-store' });
-        if (r.ok) return url;
-      } catch {}
+      try { const r = await fetch(url, { method:'HEAD', cache:'no-store' }); if (r.ok) return url; } catch {}
     }
     return null;
   }
@@ -137,7 +131,6 @@
 
   async function build() {
     const root = document.getElementById('units');
-    // Partner-specific cache key: repo name + timestamp to obliterate stale CDN entries
     const parts = location.pathname.split('/').filter(Boolean);
     const repoKey = (location.hostname.endsWith('.github.io') ? (parts[0]||'') : (parts[1]||parts[0]||''));
     const v = `${repoKey}-${Date.now()}`;
@@ -145,36 +138,27 @@
     for (const u of UNITS) {
       const stack = document.createElement('div');
       stack.className = 'stack';
-
       const card = document.createElement('div');
       card.className = 'card';
 
-      // Resolve actual file
       const srcBase = await pickFirstExisting(candidateFiles(u.dir));
-
-      // Load HTML text with no-store, inject <base href="...?..."> so ALL relative assets get cache-busted
       const iframe = document.createElement('iframe');
       iframe.width = u.w; iframe.height = u.h; iframe.scrolling = 'no';
 
       if (srcBase) {
         try {
-          const res = await fetch(srcBase, { cache: 'no-store' });
+          const res = await fetch(srcBase, { cache:'no-store' });
           const html = await res.text();
           const base = `<base href="${srcBase}?v=${v}">`;
           iframe.srcdoc = `${base}\n${html}`;
-        } catch {
-          // fallback: direct src with cache-buster (still helps for plain HTML)
-          iframe.src = `${srcBase}?v=${v}`;
-        }
+        } catch { iframe.src = `${srcBase}?v=${v}`; }
       }
       card.appendChild(iframe);
 
-      // Open button (links to file with cache-buster)
       const openRow = document.createElement('div');
       openRow.className = `open-row ${widthClass(u.w)}`;
       const a = document.createElement('a');
-      a.className = 'btn';
-      a.target = '_blank'; a.rel = 'noopener';
+      a.className = 'btn'; a.target = '_blank'; a.rel = 'noopener';
       a.textContent = `Open ${u.label}`;
       a.href = `${(srcBase || candidateFiles(u.dir)[0])}?v=${v}`;
       openRow.appendChild(a);
@@ -182,7 +166,6 @@
 
       stack.appendChild(card);
 
-      // Separator only under the smaller unit in each pair
       if (u.sep) {
         const sep = document.createElement('div');
         sep.className = `sep ${widthClass(u.w)}`;
